--- a/Studybud/static/styles/main.css
+++ b/Studybud/static/styles/main.css
@@ -322,7 +322,7 @@ h3 {
 #activitySection > h3 {
     position: sticky;
     top: -20px;
-    padding: 4px;
+    padding: 16px 0;
     background-color: var(--tertiaryColor);
 }
 .activityContent {
