--- a/Studybud/static/styles/profile.css
+++ b/Studybud/static/styles/profile.css
@@ -122,11 +122,16 @@ h3 {
 #roomsSection > .container > .room {
     background-color: var(--tertiaryColor);
     border-radius: 30px;
-    height: 150px;
+    min-height: max-content;
+    max-height: 180px;
     padding: 8px 24px;
     display: flex;
     flex-direction: column;
     gap: 8px;
+}
+
+#btns a:hover, .roomTopic:hover, .post a:hover, #userInfo a:hover {
+    text-decoration: none;
 }
 
 #roomsSection .roomHeading {
